test/expected/k_declare_i.out
declare S as int
        ^
9: error: "S": previously declared as type "struct S"
